starry-business-app支持用LLM调用MCP工具;更新文档