@@ -35,13 +35,25 @@
    集成全局的公共基础类的内嵌模块，被其他模块所依赖。
 
 
-6. starry-mdc-spring-boot-autoconfigure
+6. starry-ai-spring-boot-autoconfigure  
+   集成Spring AI的基础能力，被其他模块所依赖。
+
+
+7. starry-mcp-server-app
+   一个MCP服务提供者应用
+
+
+8. starry-mcp-server-remote
+   定义MCP服务的接口返回格式，通常被mcp服务提供者或大模型客户端所依赖。
+
+
+9. starry-mdc-spring-boot-autoconfigure
    提供日志调用链路的跟踪能力。已支持的组件有：
    * Web过滤器
    * 可扩展的虚拟线程池：ExtendedVirtualThreadExecutorService
    * MQ消费者（包括Redis、Pulsar、RocketMQ）
    * Reactor内置线程池，包括WebFlux任务
-   * SpringAI的MCP服务（SSE方式）
+   * SpringAI的MCP服务（streamable-http方式）
 
 ### 1.3 mysql初始化数据
 #### DDL
@@ -747,6 +759,9 @@ java --add-opens java.base/sun.net=ALL-UNNAMED -jar starry-business-app.jar
 
 # 启动单点登录服务进程（授权服务器），如果业务应用需要单点登录时必须启动此进程
 java --add-opens java.base/sun.net=ALL-UNNAMED -jar starry-authorization-server-app.jar
+
+# 启动MCP服务提供者进程
+java --add-opens java.base/sun.net=ALL-UNNAMED -jar starry-mcp-server-app.jar
 ```
 > 注：在使用Pulsar3.x的情况下，启动Java进程时需要添加VM启动参数--add-opens java.base/sun.net=ALL-UNNAMED
 
